--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "angular-ui-date",
-  "version": "1.1.1",
-  "description": "This directive allows you to add a date-picker to your form elements.",
+  "name": "angular-ui-date-pregiotek",
+  "version": "1.1.2",
+  "description": "Fork from angular-ui-date: This directive allows you to add a date-picker to your form elements.",
   "author": "https://github.com/angular-ui/ui-date/graphs/contributors",
   "license": "MIT",
   "homepage": "http://angular-ui.github.com/ui-date",
