--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "description": "Fork from angular-ui-date: This directive allows you to add a date-picker to your form elements.",
   "author": "https://github.com/angular-ui/ui-date/graphs/contributors",
   "license": "MIT",
-  "homepage": "http://angular-ui.github.com/ui-date",
+  "homepage": "https://github.com/pregiotek/ui-date",
   "main": "./dist/date.js",
   "ignore": [
     "**/.*",
