--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "angular-ui-date",
-  "version": "1.1.1",
-  "description": "This directive allows you to add a date-picker to your form elements.",
+  "name": "angular-ui-date-pregiotek",
+  "version": "1.1.2",
+  "description": "Fork by Pregiotek : This directive allows you to add a date-picker to your form elements.",
   "main": "dist/date.js",
   "scripts": {
     "build": "npm run test && webpack",
